# KR5sixxR650WP_description

./: CMakeLists.txt  README.md  manifest.xml  package.xml  urdf.rviz
control/: controllers.launch  controllers.yaml
launch/: display.launch  gazebo.launch
meshes/: tool_changer_link.STL
robots/: KR5sixxR650WP_description.URDF  KR5sixxR650WP_gazebo.URDF  kr5sixx_r650wp_description.URDF
