<?xml version="1.0"?>
<package format="2">
  <name>kr5sixx_r650wp_description</name>
  <version>0.0.1</version>
  <description>The kr5sixx_r650wp_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="arprice@gatech.edu">Andrew Price</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
